kubernetes/apps/storage/longhorn/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: storage
  annotations:
    glance/internal: "true"
    glance/name: Longhorn
    glance/icon: di:longhorn
    glance/description: Cluster Storage
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - "longhorn.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
